src/objects/Apttus_Config2__ProductGroupMember__c.object
<CustomObject>
    <description>Represents a single product in a product group.</description>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <description>ID of the associated group</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the group</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Groups</relationshipLabel>
        <relationshipName>ProductGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Ratio__c</fullName>
        <description>The ratio of the product in the bundle. Only applicable to ad hoc bundles</description>
        <inlineHelpText>The ratio of the product in the bundle. Only applicable to ad hoc bundles</inlineHelpText>
        <label>Ratio</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The group display sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-9247 : Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-9247 : Used for master data key generation</description>
        <displayFormat>PGM-{00000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <label>Product Group Member</label>
    <nameField>
        <displayFormat>GM-{0000000000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>